tests/invalid/invalid_loop_control_usage.ri
func main() {
    {
        break; // invalid
    }
    {
        continue; // invalid
    }

    while {
        defer {
            break; // invalid
        }
    }

    while {
        defer {
            continue; // invalid
        }
    }

    while {
        defer {
            while {
                break; // valid
            }
        }
        defer {
            while {
                continue; // valid
            }
        }
    }
}
